@@ -1,5 +1,5 @@
 [comun]
-realze = 0
+realze = 1
 remotos = 0
 whois = 1
 colorrealze = 7
